--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ certifi==2023.5.7
 charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
+crispy-bootstrap4==2022.1
 decorator==5.1.1
 Django==4.2.2
+django-crispy-forms==2.0
 django-taggit==4.0.0
 future==0.18.3
 geocoder==1.38.1
