--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ click==8.1.3
 colorama==0.4.6
 crispy-bootstrap4==2022.1
 decorator==5.1.1
-Django==4.2.2
+Django==4.1.1
+#Django==4.2.2
 django-crispy-forms==2.0
 django-taggit==4.0.0
 future==0.18.3
